IDEA-383336 [java] Remove java.annotations.inference.nullable.method.* registry keys
GitOrigin-RevId: e7e7c24a0038d45690d668f1cf9ef831ba10b4eb